# git-account-manager

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.tsx  ThemeContext.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git.rs  lib.rs  main.rs  models.rs  oauth.rs  platform.rs  ssh.rs  storage.rs
src/components/: ConfirmDialog.tsx  ProfileCard.tsx  ProfileForm.tsx  SettingsPage.tsx
